--- a/siteinfo.html
+++ b/siteinfo.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Главная - "Про Компы"</title>
+<title>О сайте - "Про Компы"</title>
   <link rel="icon" href="favicon.ico">
 <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
@@ -31,12 +31,13 @@
 <center>
 <br>
 <h1>Про Компы</h1>
-<h3>Сайт про компьютерные гайды. Как работать с ПК. Сайт создан специально для новичков в компьютерной тематике.</h3>
+<h3>О нашем сайте.</h3>
 <hr>
-<p>Добро пожаловать на наш сайт! Мы создали его специально для тех, кто только что или совсем недавно сел за компьютер!</p>
-<p>Наш сайт так-же был создан совсем недавно. Тут мы будем выпускать статьи по теме: как работать с ПК, как избавится от компьютерных вирусов, как установить программу и так далее!</p>
-<h3><a href="articles/index.html">Перейти к статьям</a></h3>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<p>"Про Компы" - это сайт, созданный специально для тех, кто только сел за ПК и не знает, что как делать. Кол-во статей на нашем сайте будет увеличиваться с каждым днём! Наш сайт был запущен совсем недавно, поэтому вы сможете найти не всю информацию, которая вам нужна, однако со временем на нашем сайте будет много статей, что вы сможете найти буквально всё, что нужно новичку!</p>
+<p>Спасибо что прочитали. Удачи!</p>
+<br>
+<h3><a href="index.html">Перейти на главную</a></h3>
+<br><br><br><br><br><br><br><br><br><br><br>
 </center>
 <div class="copyright">
 <center>
