--- a/404.html
+++ b/404.html
@@ -3,49 +3,158 @@
 <head>
 <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>404 - "Про Компы"</title>
+<title>404 - Про Компы</title>
   <link rel="icon" href="favicon.ico">
 <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
-<nav>  
-   <ul class="topmenu">
-    <li><a href="index.html">Главная</a></li>
-    <li><a href="siteinfo.html">Об этом сайте</a></li>
-    <li><a href="articles/index.html">Статьи и гайды</a></li>
-  </ul>
-        <div class="menu">
-<br>
-    <input type="checkbox" id="burger-checkbox" class="burger-checkbox">
-    <label for="burger-checkbox" class="burger"></label>
-    <ul class="menu-list">
-<br><br>
-            <li><a class="menu-item" href="index.html">Главная</a></li>
-            <li><a class="menu-item" href="siteinfo.html">Об этом сайте</a></li>
-            <li><a class="menu-item" href="articles/index.html">Статьи и гайды</a></li>
-       </ul>
-<br>
 </div>
-<hr>
 </nav>
-<center>
-<br>
-<h1>Про Компы</h1>
-<h3>404 - Страница не найдена</h3>
+<div id="menu" class="modal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title">❌ Про Компы - ошибка</h3>
+        <a href="index.html" title="Закрыть меню" class="close">×</a>
+      </div>
+      <div class="modal-body">    
+<h1>❌  Про Компы</h1>
+<h3>Страница не найдена</h3>
 <hr>
 <p>Упс! Этой страницы не существует!</p>
 <p>Возможно URL этой страницы указан неверно! Проверьте правильность URL-адреса или перейдите на главную.</p>
-<h3><a href="https://prokompi.github.io/">Перейти на главную</a></h3>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-</center>
-<div class="copyright">
-<center>
-<br><br>
-<h2>Про Компы (prokompi.github.io)</h2>
-<h5>Компьютер для начинающих</h5>
-<h5>© ПРО КОМПЫ, 2024</h5>
 <br>
+<h3><a href="index.html">Перейти на главную</a> | <a href="articles/index.html">Перейти к статьям</a></h3>
+<br>
+<hr>
+<center>
+<h3>© ПРО КОМПЫ, 2024</h3>
 </center>
+      </div>
+    </div>
+  </div>
 </div>
+
+
+ 
+<!-- CSS-стили модального окна -->
+<style>
+/* Стили всплывающего окна по-умолчанию */
+.modal {
+    position: fixed; /* фиксированное положение */
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1050;
+    opacity: 1; /* по умолчанию модальное окно прозрачно */
+    -webkit-transition: opacity 200ms ease-in; 
+    -moz-transition: opacity 200ms ease-in;
+    transition: opacity 200ms ease-in; /* анимация перехода */
+    pointer-events: auto; /* элемент невидим для событий мыши */
+
+    overflow-y: auto;
+}
+/* При отображении модального окно */
+.modal:target {
+    opacity: 1; /* делаем окно видимым */
+   pointer-events: auto; /* элемент видим для событий мыши */
+    overflow-y: auto; /* добавляем прокрутку по y, когда элемент не помещается на страницу */
+}
+/* ширина модального окна и его отступы от экрана */
+.modal-dialog {
+    position: relative;
+    width: auto;
+    margin: 10px;
+}
+@media (min-width: 576px) {
+  .modal-dialog {
+      max-width: 500px;
+      margin: 30px auto; /* отображение окна по центру */
+  }
+}
+/* Стили для блока с контентом окна */ 
+.modal-content {
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    background-color: #fff;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: .3rem;
+    outline: 0;
+}
+@media (min-width: 768px) {
+  .modal-content {
+      -webkit-box-shadow: 0 5px 15px rgba(0,0,0,.5);
+      box-shadow: 0 5px 15px rgba(0,0,0,.5);
+  }
+}
+/* Стили заголовка окна */
+.modal-header {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: 15px;
+    border-bottom: 1px solid #eceeef;
+}
+.modal-title {
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: 1.5;
+    font-size: 1.25rem;
+    font-weight: 500;
+    color: black;
+}
+/* Стили кнопки "х" ("Закрыть")  */
+.close {
+    float: right;
+    font-family: sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #000;
+    opacity: .5;
+    text-decoration: none;
+    color: red;
+}
+/* Стили для закрывающей кнопки в фокусе или наведении */
+.close:focus, .close:hover {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    opacity: .75;
+}
+/* Стили блока основного содержимого окна */
+.modal-body {
+  position: relative;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    padding: 15px;
+    overflow: auto;
+}
+</style>
+</body>
+</html>
 </body>
 </html>
