--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>404 - Про Компы</title>
   <link rel="icon" href="favicon.ico">
-<link rel="stylesheet" type="text/css" href="styles.css" />
+<link rel="stylesheet" type="text/css" href="https://prokompi.github.io/styles.css" />
 </head>
 <body>
 </div>
