--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h3 class="modal-title">❌ Про Компы - ошибка</h3>
-        <a href="index.html" title="Закрыть меню" class="close">×</a>
+        <a href="https://prokompi.github.io/" title="Закрыть" class="close">×</a>
       </div>
       <div class="modal-body">    
 <h1>❌  Про Компы</h1>
@@ -24,7 +24,7 @@
 <p>Упс! Этой страницы не существует!</p>
 <p>Возможно URL этой страницы указан неверно! Проверьте правильность URL-адреса или перейдите на главную.</p>
 <br>
-<h3><a href="index.html">Перейти на главную</a> | <a href="articles/index.html">Перейти к статьям</a></h3>
+<h3><a href="https://prokompi.github.io/">Перейти на главную</a> | <a href="https://prokompi.github.io/articles/index.html">Перейти к статьям</a></h3>
 <br>
 <hr>
 <center>
