--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@
 <title>404 - Про Компы</title>
   <link rel="icon" href="favicon.ico">
 <link rel="stylesheet" type="text/css" href="https://prokompi.github.io/styles.css" />
+<script src="404page.js"></script>
 </head>
 <body>
 </div>
