--- a/images/index.html
+++ b/images/index.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-<h2>К сожалению доступ к списку в этой директории «/images» запрещён. Лучше не трогать эту директорию, т.к. она техническая.</h2>
-<a href="http://prokompi.github.io">Перейти на главную</a>
+<h2>В данной директории лежат изображения сайта "Про компы". Список фотографий скрыт.</h2>
+<a href="http://prokompi.github.io">Перейти на главную сайта</a>
 </body>
 </html>
