--- a/404.html
+++ b/404.html
@@ -20,10 +20,10 @@
       </div>
       <div class="modal-body">    
 <h1>❌  Про Компы</h1>
-<h3>Страница не найдена</h3>
+<h3 id="err1404">Страница не найдена</h3>
 <hr>
-<p>Упс! Этой страницы не существует!</p>
-<p>Возможно URL этой страницы указан неверно! Проверьте правильность URL-адреса или перейдите на главную.</p>
+<p id="p1404">Упс! Этой страницы не существует!</p>
+<p id="p2404">Возможно URL этой страницы указан неверно! Проверьте правильность URL-адреса или перейдите на главную.</p>
 <br>
 <h3><a href="https://prokompi.github.io/">Перейти на главную</a> | <a href="https://prokompi.github.io/articles/index.html">Перейти к статьям</a></h3>
 <br>
