--- a/404.html
+++ b/404.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>404 - Про Компы</title>
   <link rel="icon" href="favicon.ico">
 <link rel="stylesheet" type="text/css" href="https://prokompi.github.io/styles.css" />
 </head>
@@ -14,21 +13,21 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h3 class="modal-title">❌ Про Компы - ошибка</h3>
+        <h3 class="modal-title">❌ System106 - ошибка</h3>
         <a href="https://prokompi.github.io/" title="Закрыть" class="close">×</a>
       </div>
       <div class="modal-body">    
-<h1>❌  Про Компы</h1>
+<h1>❌  System106</h1>
 <h3 id="h1">Страница не найдена</h3>
 <hr>
 <p id="p1">Упс! Этой страницы не существует!</p>
 <p id="p2">Возможно URL этой страницы указан неверно! Проверьте правильность URL-адреса или перейдите на главную.</p>
 <br>
-<h3><a href="https://prokompi.github.io/">Перейти на главную</a> | <a href="https://prokompi.github.io/articles/index.html">Перейти к статьям</a></h3>
+<h3><a href="https://system106.github.io/">Перейти на главную</a>
 <br>
 <hr>
 <center>
-<h3>© ПРО КОМПЫ, 2024</h3>
+<h3>© SYSTEM106, 2024</h3>
 </center>
       </div>
     </div>
