--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Главная - "Про Компы"</title>
+<title>Главная - System106</title>
   <link rel="icon" href="favicon.ico">
 <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
@@ -14,20 +14,19 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h3 class="modal-title"><img src="https://prokompi.github.io/favicon.ico" width="20" height="20"> Про Компы - Главная</h3>
+        <h3 class="modal-title"><img src="favicon.ico" width="20" height="20"> System106 - Главная</h3>
       </div>
       <div class="modal-body">    
         
-<h1><img src="https://prokompi.github.io/favicon.ico" width="30" height="30">  Про Компы</h1>
-<h3>Сайт про компьютерные гайды. Как работать с ПК. Сайт создан специально для новичков в компьютерной тематике.</h3>
+<h1><img src="favicon.ico" width="30" height="30">  System106</h1>
+<h3>Сайт про компьютеры.</h3>
 <hr>
-<p>Добро пожаловать на наш сайт! Мы создали его специально для тех, кто только что или совсем недавно сел за компьютер!</p>
-<p>Наш сайт так-же был создан совсем недавно. Тут мы будем выпускать статьи по теме: как работать с ПК, как избавится от компьютерных вирусов, как установить программу и так далее!</p>
-<h3><a href="articles/index.html">Перейти к статьям</a> | <a href="siteinfo.html">Информация о сайте</a></h3>
+<p>Добро пожаловать на наш сайт! На этом сайте будут выходить главные новости в IT-тематике, статьи по компьютерной тематике, а так-же инструкции для новичков. Наш сайт был создан совсем недавно, поэтому тут не очень много контента.</p>
+<h3><a href="newbie/index.html">Инструкции для новичков</a> | <a href="siteinfo.html">Информация о сайте</a> | <a href="articles/index.html">"System106" - статьи</a> | <a href="blog/index.html">Блог</a></h3>
  <br>
 <hr>
 <center>
-<h3>© ПРО КОМПЫ, 2024</h3>
+<h3>© SYSTEM106, 2024</h3>
 </center>
       </div>
     </div>
