--- a/newbie/index.html
+++ b/newbie/index.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Статьи - System106</title>
+<title>Инструкции для новичков - System106</title>
   <link rel="icon" href="favicon.ico">
 <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
 <nav>  
    <ul class="topmenu">
-    <li><h2> <img src="favicon.ico" width="40px" height="40px" align="center"> Статьи</h2></li>
+    <li><h2> <img src="favicon.ico" width="40px" height="40px" align="center"> Для новичков</h2></li>
     <li> </li>
     <li> </li>
     <li> </li>
@@ -30,7 +30,7 @@
 <br><br>
 <center>
             <li><img src="favicon.ico" width="40px" height="40px" align="center"></li>
-            <li><h3>Статьи</h3></li>
+            <li><h3>Для новичков</h3></li>
 </center>
             <li><a class="menu-item" href="../index.html">Главная</a></li>
             <li><a class="menu-item" href="../siteinfo.html">Об этом сайте</a></li>
@@ -45,15 +45,55 @@
 <center>
 <br>
 <h1>System106</h1>
-<h3>Статьи про IT и не только</h3>
+<h3>Инстуркции для новичков</h3>
 
 
 <br>
 <br>
 <hr>
 <br>
-<p>03.08.2024, 18:00</p>
-<h2><a href="1.html">Как загрузить Windows 10 или Windows 11 в безопасном режиме</a></h2>
+<p>07.07.2024, 19:00</p>
+<h2><a href="1.html">Начало работы за ПК - АЗЫ.</a></h2>
+<br>
+<hr>
+<br>
+<br>
+<br>
+<br>
+<hr>
+<br>
+<p>08.07.2024, 18:00</p>
+<h2><a href="2.html">Создание ярлыков на рабочем столе.</a></h2>
+<br>
+<hr>
+<br>
+<br>
+<br>
+<br>
+<hr>
+<br>
+<p>10.07.2024, 22:00</p>
+<h2><a href="3.html">Как узнать свою версию Windows.</a></h2>
+<br>
+<hr>
+<br>
+<br>
+<br>
+<br>
+<hr>
+<br>
+<p>14.07.2024, 17:00</p>
+<h2><a href="4.html">Установка веб-браузеров.</a></h2>
+<br>
+<hr>
+<br>
+<br>
+<br>
+<br>
+<hr>
+<br>
+<p>28.07.2024, 21:30</p>
+<h2><a href="5.html">Возвращение значка "Этот компьютер", "Компьютер" или "Мой Компьютер" на рабочий стол.</a></h2>
 <br>
 <hr>
 <br>
@@ -63,7 +103,7 @@
 <div class="copyright">
 <center>
 <br><br>
-<h2>System106 - статьи</h2>
+<h2>System106 - для начинающих</h2>
 <h5>© SYSTEM106, 2024</h5>
 <br>
 </center>
