--- a/siteinfo.html
+++ b/siteinfo.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>О нашем сайте - "Про Компы"</title>
+<title>О нашем сайте - System106</title>
   <link rel="icon" href="favicon.ico">
 <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
@@ -14,21 +14,21 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h3 class="modal-title">📌 Про Компы - О нашем сайте</h3>
+        <h3 class="modal-title">📌 System106 - О нашем сайте</h3>
         <a href="index.html" title="Закрыть" class="close">×</a>
       </div>
       <div class="modal-body">    
-<h1><img src="https://prokompi.github.io/favicon.ico" width="30" height="30">  Про Компы</h1>
+<h1><img src="https://prokompi.github.io/favicon.ico" width="30" height="30">  System106</h1>
 <h3>О нашем сайте</h3>
 <hr>
-<p>"Про Компы" - это сайт, созданный специально для тех, кто только сел за ПК и не знает, что как делать. Кол-во статей на нашем сайте будет увеличиваться с каждым днём! Наш сайт был запущен совсем недавно, поэтому вы сможете найти не всю информацию, которая вам нужна, однако со временем на нашем сайте будет много статей, что вы сможете найти буквально всё, что нужно новичку!</p>
+<p>"System106" - это сайт, на котором вы выкладываем: IT-новости, гайды для новичков в ПК-тематике, а так-же статьи, связанные с IT. Наш сайт открылся совсем недавно, поэтому тут пока-что достаточно мало материала, но с каждым днём его количество увеличивается! Изначально наш сайт предназначался только для новичков в ПК-тематике, но в итоге стал сайтом для всех, кому интересна ПК-тематика.</p>
 <p>Спасибо что прочитали. Удачи!</p>
 <br>
-<h3><a href="index.html">Перейти на главную</a> | <a href="articles/index.html">Перейти к статьям</a></h3>
+<h3><a href="newbie/index.html">Инструкции для новичков</a> | <a href="index.html">Главная</a> | <a href="articles/index.html">"System106" - статьи</a> | <a href="blog/index.html">Блог</a></h3>
 <br>
 <hr>
 <center>
-<h3>© ПРО КОМПЫ, 2024</h3>
+<h3>© SYSTEM106, 2024</h3>
 </center>
       </div>
     </div>
