--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="favicon.ico">
-<link rel="stylesheet" type="text/css" href="https://prokompi.github.io/styles.css" />
+<link rel="stylesheet" type="text/css" href="https://sys106.github.io/styles.css" />
 </head>
 <body>
 </div>
