--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h3 class="modal-title">❌ System106 - ошибка</h3>
-        <a href="https://prokompi.github.io/" title="Закрыть" class="close">×</a>
+        <a href="https://sys106.github.io/" title="Закрыть" class="close">×</a>
       </div>
       <div class="modal-body">    
 <h1>❌  System106</h1>
@@ -23,7 +23,7 @@
 <p id="p1">Упс! Этой страницы не существует!</p>
 <p id="p2">Возможно URL этой страницы указан неверно! Проверьте правильность URL-адреса или перейдите на главную.</p>
 <br>
-<h3><a href="https://system106.github.io/">Перейти на главную</a>
+<h3><a href="https://sys106.github.io/">Перейти на главную</a>
 <br>
 <hr>
 <center>
