--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <h1><img src="favicon.ico" width="30" height="30">  System106</h1>
 <h3>Сайт про компьютеры.</h3>
 <hr>
-<p>Добро пожаловать на наш сайт! На этом сайте будут выходить главные новости в IT-тематике, статьи по компьютерной тематике, а так-же инструкции для новичков. Наш сайт был создан совсем недавно, поэтому тут не очень много контента.</p>
+<p>Добро пожаловать на наш сайт! На этом сайте будут выходить статьи по компьютерной тематике, мой блог, а так-же инструкции для новичков. Наш сайт был создан совсем недавно, поэтому тут не очень много контента.</p>
 <h3><a href="newbie/index.html">Инструкции для новичков</a> | <a href="siteinfo.html">Информация о сайте</a> | <a href="articles/index.html">"System106" - статьи</a> | <a href="blog/index.html">Блог</a></h3>
  <br>
 <hr>
