--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Главная - System106</title>
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="https://sys106.github.io/sys106media/img/logo.ico">
 <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
@@ -14,11 +14,11 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h3 class="modal-title"><img src="favicon.ico" width="20" height="20"> System106 - Главная</h3>
+        <h3 class="modal-title"><img src="https://sys106.github.io/sys106media/img/logo.ico" width="20" height="20"> System106 - Главная</h3>
       </div>
       <div class="modal-body">    
         
-<h1><img src="favicon.ico" width="30" height="30">  System106</h1>
+<h1><img src="https://sys106.github.io/sys106media/img/logo.ico" width="30" height="30">  System106</h1>
 <h3>Сайт про компьютеры.</h3>
 <hr>
 <p>Добро пожаловать на наш сайт! На этом сайте будут выходить статьи по компьютерной тематике, мой блог, а так-же инструкции для новичков. Наш сайт был создан совсем недавно, поэтому тут не очень много контента.</p>
