--- a/index.html
+++ b/index.html
@@ -8,151 +8,81 @@
 <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
+<div class="zakrep">
+<nav>  
+   <ul class="topmenu">
+    <li><h2> <img src="https://sys106.github.io/sys106media/img/logo.ico" width="40px" height="40px" align="center"> System106</h2></li>
+    <li> </li>
+    <li> </li>
+    <li> </li>
+    <li> </li>
+    <li> </li>
+    <li><a href="index.html">Главная</a></li>
+    <li><a href="newbie/index.html">Для новичков</a></li>
+    <li><a href="articles/index.html">System106 - статьи</a></li>
+    <li><a href="blog/index.html">Блог</a></li>
+  </ul>
+        <div class="menu">
+<br>
+    <input type="checkbox" id="burger-checkbox" class="burger-checkbox">
+    <label for="burger-checkbox" class="burger"></label>
+    <ul class="menu-list">
+<br><br>
+<center>
+            <li><img src="https://sys106.github.io/sys106media/img/logo.ico" width="40px" height="40px" align="center"></li>
+            <li><h3>System106</h3></li>
+</center>
+            <li><a class="menu-item" href="index.html">Главная</a></li>
+            <li><a class="menu-item" href="newbie/index.html">Для новичков</a></li>
+            <li><a class="menu-item" href="articles/index.html">System106 - статьи</a></li>
+            <li><a class="menu-item" href="blog/index.html">Блог</a></li>
+       </ul>
+<br>
+</div>
 </div>
 </nav>
-<div id="menu" class="modal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h3 class="modal-title"><img src="https://sys106.github.io/sys106media/img/logo.ico" width="20" height="20"> System106 - Главная</h3>
-      </div>
-      <div class="modal-body">    
-        
-<h1><img src="https://sys106.github.io/sys106media/img/logo.ico" width="30" height="30">  System106</h1>
-<h3>Сайт про компьютеры.</h3>
-<hr>
-<p>Добро пожаловать на наш сайт! На этом сайте будут выходить статьи по компьютерной тематике, мой блог, а так-же инструкции для новичков. Наш сайт был создан совсем недавно, поэтому тут не очень много контента.</p>
-<h3><a href="newbie/index.html">Инструкции для новичков</a> | <a href="siteinfo.html">Информация о сайте</a> | <a href="articles/index.html">"System106" - статьи</a> | <a href="blog/index.html">Блог</a></h3>
- <br>
-<hr>
 <center>
-<h3>© SYSTEM106, 2024</h3>
+<br>
+<img src="https://sys106.github.io/sys106media/img/logo.ico" width="70" height="70">
+<h1>System106</h1>
+<h3>Сайт про компьютеры.</h3>
+  <button onclick="window.location.href = '#aboutus';">О нас</button>
+<hr>
+<br>
+<p>Добро пожаловать на наш сайт! Наш сайт посвящён ПК-тематике. Рады вас видеть!</p>
+<br>
+<h1>Мы:</h1>
+<br>
+<h3>🐣 Пишем инструкции для новичков в ПК тематике</h3>
+<br>
+<h3>✍ Пишем статьи, связанные с IT и не только</h3> 
+<br>
+<h3>📄 Ведём блог System106</h3>
+<br>
+<br>
+<h4>Мы открылись совсем недавно, поэтому на нашем сайте пока-что контента не много.</h4>
+<br><br>
+<hr>
+<br>
+<h1 id="aboutus">О нас</h1>
+<br><br>
+<img src="https://sys106.github.io/sys106media/img/logo.ico" width="70" height="70" align="center"> 
+<h2>Про Компы</h2>
+<p>"System106" - это сайт, на котором вы выкладываем: наш блог, гайды для новичков в ПК-тематике, а так-же просто статьи, связанные с IT. Наш сайт открылся совсем недавно, а именно 3 августа 2024 г. поэтому тут пока-что достаточно мало материала, но с каждым днём его количество увеличивается! Изначально наш сайт предназначался только для новичков в ПК-тематике, но в итоге стал сайтом для всех, кому интересна ПК-тематика.</p>
+<h4>Наша цель: познакомить людей с ПК-тематикой, если у них возникли проблемы при работе с ПК, помочь, а так-же просто поделиться нашем опытом в блоге.</h4>
+<br>
+<p>Спасибо что прочитали. Удачи!</p>
+<br><br><br><br>
+<h2><a href="#">Вверх ↑</a></h2>
+<br><br><br><br><br>
 </center>
-      </div>
-    </div>
-  </div>
+<div class="copyright">
+<center>
+<br><br>
+<h2>System106</h2>
+<h5>© SYSTEM106, 2024</h5>
+<br>
+</center>
 </div>
-
-
- 
-<!-- CSS-стили модального окна -->
-<style>
-/* Стили всплывающего окна по-умолчанию */
-.modal {
-    position: fixed; /* фиксированное положение */
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 1050;
-    opacity: 1; /* по умолчанию модальное окно прозрачно */
-    -webkit-transition: opacity 200ms ease-in; 
-    -moz-transition: opacity 200ms ease-in;
-    transition: opacity 200ms ease-in; /* анимация перехода */
-    pointer-events: auto; /* элемент невидим для событий мыши */
-
-    overflow-y: auto;
-}
-/* При отображении модального окно */
-.modal:target {
-    opacity: 1; /* делаем окно видимым */
-   pointer-events: auto; /* элемент видим для событий мыши */
-    overflow-y: auto; /* добавляем прокрутку по y, когда элемент не помещается на страницу */
-}
-/* ширина модального окна и его отступы от экрана */
-.modal-dialog {
-    position: relative;
-    width: auto;
-    margin: 10px;
-}
-@media (min-width: 576px) {
-  .modal-dialog {
-      max-width: 500px;
-      margin: 30px auto; /* отображение окна по центру */
-  }
-}
-/* Стили для блока с контентом окна */ 
-.modal-content {
-    position: relative;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    background-color: #fff;
-    -webkit-background-clip: padding-box;
-    background-clip: padding-box;
-    border: 1px solid rgba(0,0,0,.2);
-    border-radius: .3rem;
-    outline: 0;
-}
-@media (min-width: 768px) {
-  .modal-content {
-      -webkit-box-shadow: 0 5px 15px rgba(0,0,0,.5);
-      box-shadow: 0 5px 15px rgba(0,0,0,.5);
-  }
-}
-/* Стили заголовка окна */
-.modal-header {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    padding: 15px;
-    border-bottom: 1px solid #eceeef;
-}
-.modal-title {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 1.5;
-    font-size: 1.25rem;
-    font-weight: 500;
-    color: black;
-}
-/* Стили кнопки "х" ("Закрыть")  */
-.close {
-    float: right;
-    font-family: sans-serif;
-    font-size: 24px;
-    font-weight: 700;
-    line-height: 1;
-    color: #000;
-    text-shadow: 0 1px 0 #000;
-    opacity: .5;
-    text-decoration: none;
-    color: red;
-}
-/* Стили для закрывающей кнопки в фокусе или наведении */
-.close:focus, .close:hover {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-    opacity: .75;
-}
-/* Стили блока основного содержимого окна */
-.modal-body {
-  position: relative;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1 1 auto;
-    -ms-flex: 1 1 auto;
-    flex: 1 1 auto;
-    padding: 15px;
-    overflow: auto;
-}
-</style>
-</body>
-</html>
 </body>
 </html>
