--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <h1 id="aboutus">О нас</h1>
 <br><br>
 <img src="https://sys106.github.io/sys106media/img/logo.ico" width="70" height="70" align="center"> 
-<h2>Про Компы</h2>
+<h2>System106</h2>
 <p>"System106" - это сайт, на котором вы выкладываем: наш блог, гайды для новичков в ПК-тематике, а так-же просто статьи, связанные с IT. Наш сайт открылся совсем недавно, а именно 3 августа 2024 г. поэтому тут пока-что достаточно мало материала, но с каждым днём его количество увеличивается! Изначально наш сайт предназначался только для новичков в ПК-тематике, но в итоге стал сайтом для всех, кому интересна ПК-тематика.</p>
 <h4>Наша цель: познакомить людей с ПК-тематикой, если у них возникли проблемы при работе с ПК, помочь, а так-же просто поделиться нашем опытом в блоге.</h4>
 <br>
