--- a/goto/page.html
+++ b/goto/page.html
@@ -48,7 +48,7 @@ color: #FF0000
 </nav>
 <center>
 <br>
-<h3>Вы уверены что хотите перейти по URL <a><span id="URL">Не определено</span></a>?</h3>
+<h3>Вы уверены, что хотите перейти по URL <a><span id="URL">Не определено</span></a>?</h3>
 <br>
 <h4>Мы никак не регулируем содержимое данной страницы, а значит там может находится что угодно.</h4>
 <h4>Вы уверены, что хотите продолжить?</h4>
