--- a/404.html
+++ b/404.html
@@ -53,7 +53,7 @@ color: #FF0000
 <h3>404</h3>
 <hr>
 <br>
-<h3>Упс! Мы искали.... искали.... но так и не нашли <span id="page404"></span><a class="errurl" href="#404" onclick="sendAlert()"><span id="currentURL">эту страницу</span></a>!</h3>
+<h3>Упс! Мы искали.... искали.... но так и не нашли <span id="page404"></span><a class="errurl" href="#"><span id="currentURL">эту страницу</span></a>!</h3>
 <br>
 <h4>Наш сайт работает. Не переживайте! Просто вы зашли на страницу, которой никогда не было или она была, но её удалили навсегда.</h4>
 <h4>Проверьте правильность URL-адреса или отправьтесь на главную</h4>
