--- a/404.html
+++ b/404.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="https://sys106.github.io/sys106media/img/logo.ico">
-<link rel="stylesheet" type="text/css" href="https://sys106.github.io/styles.css" />
+  <link rel="icon" href="favicon.ico">
+<link rel="stylesheet" type="text/css" href="https://kostysystem.github.io/styles.css" />
 <style>
 .errurl {
 color: #FF0000
@@ -12,11 +12,10 @@ color: #FF0000
 </style>
 </head>
 <body>
-<script src="https://sys106.github.io/sys106media/404script.js">sendAlert()</script>
 <div class="zakrep">
 <nav>  
    <ul class="topmenu">
-    <li><h2> <img src="https://sys106.github.io/sys106media/img/logo.ico" width="40px" height="40px" align="center"> System106</h2></li>
+    <li><h2> <img src="favicon.ico" width="40px" height="40px" align="center"> KostySystem</h2></li>
     <li> </li>
     <li> </li>
     <li> </li>
@@ -24,7 +23,7 @@ color: #FF0000
     <li> </li>
     <li><a href="https://sys106.github.io/index.html">Главная</a></li>
     <li><a href="https://sys106.github.io/newbie/index.html">Для новичков</a></li>
-    <li><a href="https://sys106.github.io/articles/index.html">System106 - статьи</a></li>
+    <li><a href="https://sys106.github.io/articles/index.html">KostySystem - статьи</a></li>
     <li><a href="https://sys106.github.io/blog/index.html">Блог</a></li>
   </ul>
         <div class="menu">
@@ -34,12 +33,12 @@ color: #FF0000
     <ul class="menu-list">
 <br><br>
 <center>
-            <li><img src="https://sys106.github.io/sys106media/img/logo.ico" width="40px" height="40px" align="center"></li>
-            <li><h3>System106</h3></li>
+            <li><img src="favicon.ico" width="40px" height="40px" align="center"></li>
+            <li><h3>KostySystem</h3></li>
 </center>
             <li><a class="menu-item" href="https://sys106.github.io/index.html">Главная</a></li>
             <li><a class="menu-item" href="https://sys106.github.io/newbie/index.html">Для новичков</a></li>
-            <li><a class="menu-item" href="https://sys106.github.io/articles/index.html">System106 - статьи</a></li>
+            <li><a class="menu-item" href="https://sys106.github.io/articles/index.html">KostySystem - статьи</a></li>
             <li><a class="menu-item" href="https://sys106.github.io/blog/index.html">Блог</a></li>
        </ul>
 <br>
@@ -48,8 +47,8 @@ color: #FF0000
 </nav>
 <center>
 <br>
-<img src="https://sys106.github.io/sys106media/img/logo.ico" width="70" height="70">
-<h1>System106</h1>
+<img src="favicon.ico" width="70" height="70">
+<h1>KostySystem</h1>
 <h3>404</h3>
 <hr>
 <br>
@@ -67,8 +66,8 @@ color: #FF0000
 <div class="copyright">
 <center>
 <br><br>
-<h2>System106</h2>
-<h5>© SYSTEM106, 2024</h5>
+<h2>KostySystem</h2>
+<h5>© KostySystem, 2024</h5>
 <br>
 </center>
 </div>
