--- a/goto/page.html
+++ b/goto/page.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="https://sys106.github.io/sys106media/img/logo.ico">
+  <link rel="icon" href="favicon.ico">
 <title>Подтверждение перехода - System106</title>
-<link rel="stylesheet" type="text/css" href="https://sys106.github.io/styles.css" />
+<link rel="stylesheet" type="text/css" href="https://kostysystem.github.io/styles.css" />
 <style>
 .errurl {
 color: #FF0000
@@ -16,7 +16,7 @@ color: #FF0000
 <div class="zakrep">
 <nav>  
    <ul class="topmenu">
-    <li><h2> <img src="https://sys106.github.io/sys106media/img/logo.ico" width="40px" height="40px" align="center"> System106</h2></li>
+    <li><h2> <img src="favicon.ico" width="40px" height="40px" align="center"> System106</h2></li>
     <li> </li>
     <li> </li>
     <li> </li>
@@ -34,7 +34,7 @@ color: #FF0000
     <ul class="menu-list">
 <br><br>
 <center>
-            <li><img src="https://sys106.github.io/sys106media/img/logo.ico" width="40px" height="40px" align="center"></li>
+            <li><img src="favicon.ico" width="40px" height="40px" align="center"></li>
             <li><h3>System106</h3></li>
 </center>
             <li><a class="menu-item" href="https://sys106.github.io/index.html">Главная</a></li>
