--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Главная - System106</title>
-  <link rel="icon" href="https://sys106.github.io/sys106media/img/logo.ico">
+<title>Главная - KostySystem</title>
+  <link rel="icon" href="favicon.ico">
 <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
 <div class="zakrep">
 <nav>  
    <ul class="topmenu">
-    <li><h2> <img src="https://sys106.github.io/sys106media/img/logo.ico" width="40px" height="40px" align="center"> System106</h2></li>
+    <li><h2> <img src="favicon.ico" width="40px" height="40px" align="center"> KostySystem</h2></li>
     <li> </li>
     <li> </li>
     <li> </li>
@@ -19,7 +19,7 @@
     <li> </li>
     <li><a href="index.html">Главная</a></li>
     <li><a href="newbie/index.html">Для новичков</a></li>
-    <li><a href="articles/index.html">System106 - статьи</a></li>
+    <li><a href="articles/index.html">KostySystem - статьи</a></li>
     <li><a href="blog/index.html">Блог</a></li>
   </ul>
         <div class="menu">
@@ -29,12 +29,12 @@
     <ul class="menu-list">
 <br><br>
 <center>
-            <li><img src="https://sys106.github.io/sys106media/img/logo.ico" width="40px" height="40px" align="center"></li>
-            <li><h3>System106</h3></li>
+            <li><img src="favicon.ico" width="40px" height="40px" align="center"></li>
+            <li><h3>KostySystem</h3></li>
 </center>
             <li><a class="menu-item" href="index.html">Главная</a></li>
             <li><a class="menu-item" href="newbie/index.html">Для новичков</a></li>
-            <li><a class="menu-item" href="articles/index.html">System106 - статьи</a></li>
+            <li><a class="menu-item" href="articles/index.html">KostySystem - статьи</a></li>
             <li><a class="menu-item" href="blog/index.html">Блог</a></li>
        </ul>
 <br>
@@ -43,8 +43,8 @@
 </nav>
 <center>
 <br>
-<img src="https://sys106.github.io/sys106media/img/logo.ico" width="70" height="70">
-<h1>System106</h1>
+<img src="favicon.ico" width="70" height="70">
+<h1>KostySystem</h1>
 <h3>Сайт про компьютеры.</h3>
   <button onclick="window.location.href = '#aboutus';">О нас</button>
 <hr>
@@ -57,7 +57,7 @@
 <br>
 <h3>✍ Пишем статьи, связанные с IT и не только</h3> 
 <br>
-<h3>📄 Ведём блог System106</h3>
+<h3>📄 Ведём блог KostySystem</h3>
 <br>
 <br>
 <h4>Мы открылись совсем недавно, поэтому на нашем сайте пока-что контента не много.</h4>
@@ -66,9 +66,9 @@
 <br>
 <h1 id="aboutus">О нас</h1>
 <br><br>
-<img src="https://sys106.github.io/sys106media/img/logo.ico" width="70" height="70" align="center"> 
-<h2>System106</h2>
-<p>"System106" - это сайт, на котором вы выкладываем: наш блог, гайды для новичков в ПК-тематике, а так-же просто статьи, связанные с IT. Наш сайт открылся совсем недавно, а именно 3 августа 2024 г. поэтому тут пока-что достаточно мало материала, но с каждым днём его количество увеличивается! Изначально наш сайт предназначался только для новичков в ПК-тематике, но в итоге стал сайтом для всех, кому интересна ПК-тематика.</p>
+<img src="favicon.ico" width="70" height="70" align="center"> 
+<h2>KostySystem</h2>
+<p>"KostySystem" - это сайт, на котором вы выкладываем: наш блог, гайды для новичков в ПК-тематике, а так-же просто статьи, связанные с IT. Наш сайт открылся совсем недавно, а именно 3 августа 2024 г. поэтому тут пока-что достаточно мало материала, но с каждым днём его количество увеличивается! Изначально наш сайт предназначался только для новичков в ПК-тематике, но в итоге стал сайтом для всех, кому интересна ПК-тематика.</p>
 <h4>Наша цель: познакомить людей с ПК-тематикой, если у них возникли проблемы при работе с ПК, помочь, а так-же просто поделиться нашем опытом в блоге.</h4>
 <br>
 <p>Спасибо что прочитали. Удачи!</p>
@@ -79,8 +79,8 @@
 <div class="copyright">
 <center>
 <br><br>
-<h2>System106</h2>
-<h5>© SYSTEM106, 2024</h5>
+<h2>KostySystem</h2>
+<h5>© KostySystem, 2024</h5>
 <br>
 </center>
 </div>
