--- a/404.html
+++ b/404.html
@@ -21,10 +21,10 @@ color: #FF0000
     <li> </li>
     <li> </li>
     <li> </li>
-    <li><a href="https://sys106.github.io/index.html">Главная</a></li>
-    <li><a href="https://sys106.github.io/newbie/index.html">Для новичков</a></li>
-    <li><a href="https://sys106.github.io/articles/index.html">KostySystem - статьи</a></li>
-    <li><a href="https://sys106.github.io/blog/index.html">Блог</a></li>
+    <li><a href="https://kostysystem.github.io/index.html">Главная</a></li>
+    <li><a href="https://kostysystem.github.io/newbie/index.html">Для новичков</a></li>
+    <li><a href="https://kostysystem.github.io/articles/index.html">KostySystem - статьи</a></li>
+    <li><a href="https://kostysystem.github.io/blog/index.html">Блог</a></li>
   </ul>
         <div class="menu">
 <br>
@@ -36,10 +36,10 @@ color: #FF0000
             <li><img src="favicon.ico" width="40px" height="40px" align="center"></li>
             <li><h3>KostySystem</h3></li>
 </center>
-            <li><a class="menu-item" href="https://sys106.github.io/index.html">Главная</a></li>
-            <li><a class="menu-item" href="https://sys106.github.io/newbie/index.html">Для новичков</a></li>
-            <li><a class="menu-item" href="https://sys106.github.io/articles/index.html">KostySystem - статьи</a></li>
-            <li><a class="menu-item" href="https://sys106.github.io/blog/index.html">Блог</a></li>
+            <li><a class="menu-item" href="https://kostysystem.github.io/index.html">Главная</a></li>
+            <li><a class="menu-item" href="https://kostysystem.github.io/newbie/index.html">Для новичков</a></li>
+            <li><a class="menu-item" href="https://kostysystem.github.io/articles/index.html">KostySystem - статьи</a></li>
+            <li><a class="menu-item" href="https://kostysystem.github.io/blog/index.html">Блог</a></li>
        </ul>
 <br>
 </div>
