--- a/404.html
+++ b/404.html
@@ -58,7 +58,7 @@ color: #FF0000
 <h4>Проверьте правильность URL-адреса или отправьтесь на главную</h4>
 <br>
 <br>
-<h1><a href="https://sys106.github.io">На главную</a></h1>
+<h1><a href="https://kostysystem.github.io">На главную</a></h1>
 <br><br><br>
 <h5>КОД ОШИБКИ: 404</h5>
 <br><br>
