--- a/404.html
+++ b/404.html
@@ -71,6 +71,18 @@ color: #FF0000
 <br>
 </center>
 </div>
+<script>
+  if ('serviceWorker' in navigator) {
+    console.log('SERVWORKER: service worker registration in progress.');
+    navigator.serviceWorker.register('/service-worker.js').then(function () {
+      console.log('SERVWORKER: service worker registration complete.');
+    }, function () {
+      console.log('SERVWORKER: service worker registration failure.');
+    });
+  } else {
+    console.log('SERVWORKER: service worker is not supported.');
+  }
+</script>
 </body>
 <script>
 var currentURL = window.location.href;
