--- a/newbie/index.html
+++ b/newbie/index.html
@@ -105,5 +105,17 @@
 <br>
 </center>
 </div>
+<script>
+  if ('serviceWorker' in navigator) {
+    console.log('SERVWORKER: service worker registration in progress.');
+    navigator.serviceWorker.register('/service-worker.js').then(function () {
+      console.log('SERVWORKER: service worker registration complete.');
+    }, function () {
+      console.log('SERVWORKER: service worker registration failure.');
+    });
+  } else {
+    console.log('SERVWORKER: service worker is not supported.');
+  }
+</script>
 </body>
 </html>
