--- a/offline/offline-landing.html
+++ b/offline/offline-landing.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Нет подключения к интернету - KostySystem</title>
-  <link rel="icon" href="/offline/favicon.ico">
+  <link rel="icon" href="https://kostysystem.github.io/favicon.ico">
 <link rel="stylesheet" type="text/css" href="/offline/styles.css" />
 <style>
 .errurl {
