--- a/offline/offline-landing.html
+++ b/offline/offline-landing.html
@@ -6,7 +6,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Нет подключения к интернету - KostySystem</title>
   <link rel="icon" href="https://kostysystem.github.io/favicon.ico">
-<link rel="stylesheet" type="text/css" href="/offline/styles.css" />
+<link rel="stylesheet" type="text/css" href="https://kostysystem.github.io/offline/styles.css" />
 <style>
 .errurl {
 color: #FF0000
