--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
+<div id="menu">
 <div class="zakrep">
 <nav>  
    <ul class="topmenu">
-    <li><h2> <img src="favicon.ico" width="40px" height="40px" align="center"> KostySystem</h2></li>
+    <li> <h2> KostySystem</h2></li>
     <li> </li>
     <li> </li>
     <li> </li>
@@ -29,7 +30,6 @@
     <ul class="menu-list">
 <br><br>
 <center>
-            <li><img src="favicon.ico" width="40px" height="40px" align="center"></li>
             <li><h3>KostySystem</h3></li>
 </center>
             <li><a class="menu-item" href="index.html">Главная</a></li>
@@ -41,6 +41,8 @@
 </div>
 </div>
 </nav>
+</div>
+<div id="page">
 <center>
 <br>
 <img src="favicon.ico" width="70" height="70">
@@ -76,25 +78,12 @@
 <h2><a href="#">Вверх ↑</a></h2>
 <br><br><br><br><br>
 </center>
-<div class="copyright">
-<center>
-<br><br>
-<h2>KostySystem</h2>
-<h5>© KostySystem, 2024</h5>
-<br>
+</div>
+<div class="copyright" id="copyright">
+<center> <br><br> <h2>KostySystem</h2> <h5>© KostySystem</h5> <br> 
+<p>! JavaScript отключён. Некоторые элементы сайта могут отображаться неправильно.</p>
 </center>
 </div>
-<script>
-  if ('serviceWorker' in navigator) {
-    console.log('SERVWORKER: service worker registration in progress.');
-    navigator.serviceWorker.register('/service-worker.js').then(function () {
-      console.log('SERVWORKER: service worker registration complete.');
-    }, function () {
-      console.log('SERVWORKER: service worker registration failure.');
-    });
-  } else {
-    console.log('SERVWORKER: service worker is not supported.');
-  }
-</script>
+<script src="elements.js"></script>
 </body>
 </html>
