--- a/newbie/index.html
+++ b/newbie/index.html
@@ -47,7 +47,6 @@
 <h1>KostySystem</h1>
 <h3>Инстуркции для новичков</h3>
 
-
 <br>
 <br>
 <hr>
@@ -98,7 +97,17 @@
 <hr>
 <br>
 <br>
-<br><br><br><br><br><br><br><br><br>
+<br>
+<br>
+<hr>
+<br>
+<p>18.08.2024, 19:00</p>
+<h2><a href="6.html">Установка архиватора 7-Zip.</a></h2>
+<br>
+<hr>
+<br>
+<br>
+<br><br><br><br><br>
 </center>
 <div class="copyright" id="copyright">
 <center> <br><br> <h2>KostySystem</h2> <h5>© KostySystem</h5> <br> 
