--- a/newbie/6.html
+++ b/newbie/6.html
@@ -56,7 +56,7 @@
 <h3>Загрузка и установка</h3>
 <hr>
 <br>
-<p>Пункт №1. Перейдите на сайт <a href="https://7-zip.org/">https://7-zip.org/</a></p>
+<p>Пункт №1. Перейдите на сайт <a href="https://7-zip.org/" target="_blank">https://7-zip.org/</a></p>
 <div class="computer-show">
 <img src="../images/newbie-1.png" width="630" height="320">
 </div>
