--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Главная - KostySystem</title>
   <link rel="icon" href="favicon.ico">
 <link rel="stylesheet" type="text/css" href="styles.css" />
+<script src="https://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU" type="text/javascript"></script>
 </head>
 <body>
 <div id="menu">
@@ -75,6 +76,9 @@
 <br>
 <p>Спасибо что прочитали. Удачи!</p>
 <br><br><br><br>
+<div id="local-content">
+
+</div>
 <br><br><br><br><br>
 </center>
 </div>
@@ -84,5 +88,6 @@
 </center>
 </div>
 <script src="elements.js"></script>
+<script src="local.js" type="text/javascript"></script>
 </body>
 </html>
