--- a/special/perexod-ru-po.html
+++ b/special/perexod-ru-po.html
@@ -46,7 +46,7 @@
 <div id="page">
 <center>
 <br>
-<h3>Для работы данной страницы включите JavaScript!</h2>
+<h3>Загрузка...</h2>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </center>
 </div>
