--- a/special/perexod-ru-po.html
+++ b/special/perexod-ru-po.html
@@ -19,10 +19,10 @@
     <li> </li>
     <li> </li>
     <li> </li>
-    <li><a href="index.html">Главная</a></li>
-    <li><a href="newbie/index.html">Для новичков</a></li>
-    <li><a href="articles/index.html">KostySystem - статьи</a></li>
-    <li><a href="blog/index.html">Блог</a></li>
+    <li><a href="../index.html">Главная</a></li>
+    <li><a href="../newbie/index.html">Для новичков</a></li>
+    <li><a href="../articles/index.html">KostySystem - статьи</a></li>
+    <li><a href="../blog/index.html">Блог</a></li>
   </ul>
         <div class="menu">
 <br>
@@ -33,10 +33,10 @@
 <center>
             <li><h3>KostySystem</h3></li>
 </center>
-            <li><a class="menu-item" href="index.html">Главная</a></li>
-            <li><a class="menu-item" href="newbie/index.html">Для новичков</a></li>
-            <li><a class="menu-item" href="articles/index.html">KostySystem - статьи</a></li>
-            <li><a class="menu-item" href="blog/index.html">Блог</a></li>
+            <li><a class="menu-item" href="../index.html">Главная</a></li>
+            <li><a class="menu-item" href="../newbie/index.html">Для новичков</a></li>
+            <li><a class="menu-item" href="../articles/index.html">KostySystem - статьи</a></li>
+            <li><a class="menu-item" href="../blog/index.html">Блог</a></li>
        </ul>
 <br>
 </div>
