--- a/404.html
+++ b/404.html
@@ -48,7 +48,7 @@ color: #FF0000
 </div>
 <center>
 <br>
-<img src="favicon.ico" width="70" height="70">
+<img src="/favicon.ico" width="70" height="70">
 <h1>KostySystem</h1>
 <h3>404</h3>
 <hr>
