--- a/special/perexod-ru-po.html
+++ b/special/perexod-ru-po.html
@@ -5,7 +5,9 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title> - KostySystem</title>
   <link rel="icon" href="favicon.ico">
-<link rel="stylesheet" type="text/css" href="../styles.css" />
+<div id="styles">
+<link rel="stylesheet" type="text/css" href="/styles.css" />
+</div>
 <script src="https://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU" type="text/javascript"></script>
 </head>
 <body>
