--- a/404.html
+++ b/404.html
@@ -4,7 +4,9 @@
 <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="/favicon.ico">
-<link rel="stylesheet" type="text/css" href="https://kostysystem.github.io/styles.css" />
+<div id="styles">
+<link rel="stylesheet" type="text/css" href="/styles.css" />
+</div>
 <style>
 .errurl {
 color: #FF0000
