--- a/newbie/1.html
+++ b/newbie/1.html
@@ -5,7 +5,9 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Начало работы с ПК - АЗЫ - KostySystem - Инструкция №1</title>
   <link rel="icon" href="favicon.ico">
-<link rel="stylesheet" type="text/css" href="styles.css" />
+<div id="styles">
+<link rel="stylesheet" type="text/css" href="/styles.css" />
+</div>
 </head>
 <body>
 <div id="menu">
