--- a/newbie/5.html
+++ b/newbie/5.html
@@ -5,7 +5,9 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Возвращение значка "Этот компьютер" на рабочий стол - KostySystem - Инструкция №5</title>
   <link rel="icon" href="favicon.ico">
-<link rel="stylesheet" type="text/css" href="styles.css" />
+<div id="styles">
+<link rel="stylesheet" type="text/css" href="/styles.css" />
+</div>
 </head>
 <body>
 <div id="menu">
