--- a/newbie/6.html
+++ b/newbie/6.html
@@ -121,7 +121,7 @@
 
 <h3><a href="index.html">К списку статей</a></h3>
 <h3><a href="5.html">Прошлая статья</a></h3>
-<h3><a href="#soon">Следующая статья (пока не написана)</a></h3>
+<h3><a href="7.html">Следующая статья</a></h3>
 
 <br>
 </center>
