--- a/newbie/index.html
+++ b/newbie/index.html
@@ -109,6 +109,16 @@
 <hr>
 <br>
 <br>
+<br>
+<br>
+<hr>
+<br>
+<p>28.08.2024, 23:00</p>
+<h2><a href="7.html">Установка VLC Media Player.</a></h2>
+<br>
+<hr>
+<br>
+<br>
 <br><br><br><br><br>
 </center>
 <div class="copyright" id="copyright">
